<resources>
    <string name="app_name">News</string>
    <string name="title_main">Dampak Gempa Donggala Bikin 1.678 BTS Tak Berfungsi</string>
    <string name="news_main">
        Jakarta - Kementerian Komunikasi dan Informatika (Kominfo) mengatakan hingga pukul 13.00 WIB, terdapat 1.678 Base Transceiver Station (BTS) dari total 4.193 BTS yang tidak berfungsi pascagempa bumi mengguncang di Sulawesi Tengah.
Kenaikan angka menjadi 40,02% BTS yang tidak berfungsi itu, karena terkendala pasokan listrik. Sementara itu, daya baterai cadangan sudah habis dan tidak bisa mendukung kebutuhan opersional BTS.
Kominfo memaparkan, sebanyak 1.678 BTS tersebut tersebar di sembilan wilayah, diantaranya Kabupaten Banggai sebanyak 163 BTS, Kabupaten Poso 150 BTS, Donggala 14 BTS, Tolitoli 172 BTS, Kabupaten Buol 3 BTS, Kabupaten Morowali 1 BTS, Kabupaten Parigi Moutong 7 BTS, dan Kabupaten Tojo Una-Una 1 BTS. Jumlah BTS yang tidak bisa berfungsi terbanyak di Kota Palu sebanyak 1167 BTS.
Saat ini, upaya pemulihan jaringan telekomunikasi di beberapa lokasi masih terkendala proses koordinasi dan adanya dampak tsunami. Kendati begitu, tim dari Kominfo bersama operator telekomunikasi, terus melakukan upaya pemulihan jaringan dengan melakukan segment transmisi Palu-Gorontalo, pemulihan koneksi IPBB, serta reroute Toli-Toli, Poso, dan Luwuk dari Palu ke Manado.
Baca juga: Layanan Telkom di Donggala dan Palu Berangsur Pulih
Di saat yang bersamaan, pada pukul 13.55 WITA rombongan Menteri Koordinator Bidang Polhukam Wiranto bersama Panglima TNI Marsekal Hadi Tjahjanto, Menkominfo Rudiantara, Menteri Perhubungan Budi Karya Sumadi, Menteri Sosial Agus Gumiwang, Kepala BAZARNAS, dan POLRI tiba di Bandara Mutiara Sis Al Jufri. Rombongan itu disambut oleh Gubernur Sulawesi Tengah Longki Janggola.
Setibanya di Bandara Palu, Menkopolhukam Wiranto langsung menggelar rapat koordinasi untuk membahas langkah-langkah pemulihan pasca gempabumi di Sulawesi Tengah.	(agt/agt)
    </string>
    <string name="title_one">Layanan Telkom di Donggala dan Palu Berangsur Pulih</string>
    <string name="news_one">
        Jakarta - Telkom mengungkapkan bahwa layanannya di wilayah Donggala dan Palu kini sudah bisa dimanfaatkan oleh masyarakat kembali.

Seperti diketahui, usai gempa bumi berkekuatan magnitudo 7,4 mengguncang Donggala sampai menimbulkan tsunami di Palu, Sulawesi Tengah, Jumat (28/9) membuat layanan Telkom mengalami gangguan.

Baca juga: Begini Kondisi Jaringan Telkomsel di Donggala dan Palu



"Saat ini layanan komunikasi SMS dan suara berangsur pulih di beberapa titik strategis kota Palu yang diprioritaskan bagi pemerintah dan instansi-instansi yang sangat membutuhkan serta jaringan 4G yang sudah kembali beroperasi di beberapa wilayah seperti Toli-toli, Poso dan Luwuk," tutur Vice President Corporate Communication Telkom Arif Prabowo dalam pernyataannya, Sabtu (29/9/2018).

Sedangkan untuk Kota Donggala, perangkat layanan voice dan internet telah pulih. Namun demikian, pelanggan IndiHome yang menggunakan jaringan fiber optik masih terkendala catuan listrik di jaringan aksesnya menuju pelanggan.

"Telkom juga telah mengaktifkan akses free wifi di area kantor Telkom Donggala yang diperuntukkan bagi masyarakat yang ingin menggunakan layanan internet." ungkap Arif.

Baca juga: 5 Cara Manfaatkan Twitter Saat Bencana Alam


TelkomGroup juga mengaktifkan sistem komunikasi satelit melalui anak usahanya Telkomsat dan sedang memberangkatkan Satellite News Gathering (SNG) dari Makassar ke Palu.

Telkom terus berupaya maksimal melakukan recovery layanan telekomunikasi untuk memudahkan koordinasi pemerintah serta seluruh petugas lapangan yang saat ini tengah fokus melakukan evakuasi terhadap masyarakat yang terkena dampak bencana.	(agt/agt)



Layanan Telkom di Donggala dan Palu Berangsur Pulih
    </string>
    <string name="title_two">Waskita Realty Beri Jam Tangan Rolex dan Undian Mini Cooper di IPEX</string>
    <string name="news_two">

PT Waskita Karya Realty kembali hadir di Indonesia Property Expo (IPEX) dengan mengusung konsep yang unik dan berbeda dari para pesaingnya. Bahkan enam proyek unggulan Waskita Realty sukses memasuki ranah persaingan pasar properti yang semakin ketat di Indonesia.

Anak perusahaan dari PT Waskita Karya (Persero) Tbk ini semakin berani dalam menghadirkan proyek-proyek prestisius yang tersebar di kota-kota besar seluruh Indonesia. Keenam proyek Waskita Realty dipamerkan dalam IPEX yang berlangsung di Jakarta Convention Center (JCC) pada 22 - 30 September 2018.

"Respons pasar selama ini terhadap proyek-proyek Waskita Realty sangat positif sehingga kami berani terus berinovasi menghadirkan produk-produk hunian yang berkualitas untuk menjawab kebutuhan pasar," ujar President Director PT Waskita Karya Realty, Tukijo.

Waskita Realty Beri Jam Tangan Rolex dan Undian Mini Cooper di IPEX
Nines Plaza dan Residence (Foto: dok. Waskita Realty)
Belajar dari pengalaman dan melihat antusiasme tinggi para pengunjung pameran IPEX di tahun sebelumnya, Waskita Realty menawarkan berbagai macam promo khusus dan menarik untuk para pengunjung yang sedang mencari hunian terbaik.

"Selama pameran ini kami memberikan promo baru yang menarik yaitu beli apartemen dapat hadiah langsung jam tangan Rolex dan undian mobil Mini Cooper," ujar VP Marketing PT Waskita Karya Realty, Gayatri.

Promo tersebut berlaku untuk pembelian unit di apartemen Yukata Suites yang berlokasi di Alam Sutera dan Nines Plaza dan Residence yang berlokasi di CBD BSD. Yukata Suites merupakan hunian vertikal terbaik dengan mengusung tema Jepang berkonsep presisi (precision), kemewahan dalam ketenangan (the luxury of silence), dan terapi (the theraphy). Apartemen Yukata Suites memiliki 5 elemen arsitektur, yaitu tanah (earth), angin (wind), air (water), kayu (wood), dan logam (metal).

    </string>
    <string name="title_three">Zurich Principle Care Berikan Perlindungan untuk Keluarga Muda</string>
    <string name="news_three">
        Jakarta -
Masa depan Indonesia ditentukan oleh generasi muda saat ini. Sayangnya, seiring dengan perkembangan kondisi lingkungan, gaya hidup modern, dan pola makan, generasi muda dengan usia produktif memiliki risiko terpapar penyakit berbahaya yang lebih tinggi.

Menurut data Badan Pusat Statistik Indonesia, saat ini 50% lebih penduduk Indonesia adalah usia produktif yang didominasi kelompok usia 15-39 tahun dengan jumlah sekitar 84,75 juta atau 32% dari total penduduk Indonesia.

Organisasi Kesehatan Dunia (WHO) juga mengungkapkan bahwa pada 2015 sedikitnya ada lebih dari 48 ribu orang meninggal dunia setiap harinya karena penyakit kardiovaskular. Bahkan pada 2020 diprediksi tiga perempat kematian di negara maju disebabkan oleh penyakit kritis.

"Di Indonesia sendiri, terdapat 3 penyakit kritis tertinggi yang menyebabkan kematian, yaitu penyakit kardiovaskular, kanker, dan diabetes. Saat ini penyakit kritis tidak terbatas pada mereka yang berusia tua. Generasi produktif di daerah urban dan sub-urban turut memiliki potensi lebih tinggi akan penyakit kritis karena stress level dan gaya hidup. Bahkan polusi di kota besar pun menjadi penyebab maraknya penyakit kritis," ujar dokter berprestasi sekaligus aktris, Lula Kamal.

Lula menjelaskan selain risiko kematian yang tinggi, penyakit kritis juga dikenal memiliki biaya medis yang tinggi. Sebagai contoh biaya perawatan penyakit kanker tiap bulannya bisa mencapai Rp 100 juta.

Melihat kondisi tersebut, Zurich Indonesia menghadirkan solusi perlindungan yang mudah, inovatif, dan fokus di setiap fase kehidupann. Melalui inovasi Zurich Principle Care, Zurich mencoba membantu keluarga muda Indonesia agar lebih siap dalam menghadapi risiko penyakit kritis.

Zurich Principle Care merupakan asuransi penyakit kritis dengan manfaat yang lengkap. Berikut rinciannya.

1. Manfaat Klaim Multipel

Memberikan kesempatan bagi Anda untuk menikmati layanan pengajuan klaim hingga maksimum tiga kali atas penyakit kritis yang tidak berhubungan dan bukan komplikasi penyakit kritis sebelumnya. Anda bisa mendapatkan manfaat asuransi hingga 175% dari nilai uang pertanggungan.

2. Klaim Kanker Lanjutan

Penyakit kanker masih menjadi penyakit kritis yang paling ditakuti di Indonesia. Dengan manfaat pengajuan klaim kanker lanjutan, Anda akan mendapatkan pertanggungan untuk Penyakit kritis kanker yang dipertanggungkan hingga maksimum 2 kali pengajuan klaim.

3. Manfaat Angioplasti

Sebesar 10% uang pertanggungan atau maksimum sebesar Rp 180 juta akan dibayarkan jika Anda didiagnosis menderita angioplasti. Manfaat ini hanya berlaku untuk satu kali pengajuan klaim.

4. Layanan Opini Medis Kedua

Zurich Principle Care menghadirkan fasilitas Opini Medis Kedua yang akan membantu Anda mendapatkan tambahan informasi berdasarkan diagnosa yang komprehensif dari para ahli di pusat pelayanan medis ternama di dunia yang terdaftar di MediGuide. Fasilitas ini bisa didapatkan kapan saja.

5. Santunan Meninggal Dunia

Santunan meninggal dunia yang akan diberikan adalah sebesar 10% dari uang pertanggungan. Santunan ini ditujukan bagi orang-orang yang Anda cintai agar dapat melanjutkan kehidupan.

Dengan mengambil alih risiko beban finansial dari penyakit kritis sejak dini, maka generasi muda bisa fokus berkarya dan mengejar impiannya. Jadi tunggu apalagi? Selagi masih muda, hadapi risiko penyakit kritis untuk berkarya demi kemajuan bangsa tanpa rasa khawatir.

Untuk info lebih lanjut klik link di sini
    </string>
    <string name="title_four">Hacker Ini Urung Hapus Akun Facebook Mark Zuckerberg</string>
    <string name="news_four">
        Jakarta - Hacker asal Taiwan Chang Chi-yuan berencana menghapus akun Facebook milik Mark Zuckerberg. Tapi ternyata urung dilakukannya kenapa?

Lewat akun Facebooknya, Chang mengungkap alasan kenapa dirinya tidak jadi menghapus akun milik bos Facebook itu. Dia rupanya ingin menghindari masalah akibat aksinya tersebut.

"Saya membatalkan live feed. Saya telah melaporkan bug ke Facebook dan saya akan menunjukkan bukti ketika saya mendapatkan hadiah dari Facebook," kata Chang dalam akun Facebooknya, seperti dilansir dari laman Bloomberg, Sabtu (29/9/2018).


Baca juga: WhatsApp Mulai Dijejali Iklan

Pembatalan tersebut tentu menimbulkan tanda tanya dan tidak heran bila kemudian ada yang meragukan kemampuan Chang. Pria berusia 24 ternyata menyadari akan hal itu.

"Akan ada banyak orang yang mempertanyakan kemampuan saya bahkan setelah saya menemukan banyak bug dan mendapatkan banyak sekali imbalan, dan saya tidak boleh mencoba membuktikan diri dengan bermain-main dengan akun Zuck," tulisnya.

Diberikan sebelumnya Chang Chi-yuan berencana meretas laman Facebook Mark Zuckerberg pada Minggu (30/9/2018) pukul 6 sore waktu lokal, atau pukul 5 sore WIB. Dia pun berjanji akan menyiarkan aksinya di Facebook Live.

Baca juga: Buka-bukaan Pendiri WhatsApp yang Bikin Facebook Murka

Chang sendiri adalah hacker yang terkenal di Taiwan. Sosoknya terdaftar sebagai \'Special Contributor\' dalam bug bounty hall of fame Line Corp pada 2016. Pernah juga ia digugat oleh penyedia layanan bus di Taiwan karena meretas sistem mereka agar bisa membeli tiket bus seharga NTD 1.

Chang dikenal sebagai orang yang menggunakan kemampuan meretasnya untuk mendapatkan uang. Yaitu dari melaporkan celah keamanan dari sistem sebuah perusahaan dan mendapatkan uang dari laporannya itu. (jsn/jsn)
    </string>
    <string name="title_five">Begini Sepak Terjang Google di Indonesia</string>
</resources>